@@ -22,7 +22,7 @@ a{outline:none}
 
 #register li {float: right; display: block; padding-left: 5px;}
 
-#content {margin-left: 0px; *margin-top: 15px;}
+#content {*margin-left: 0px; *margin-top: 15px;}
 
 #sidebar {*margin-top: 15px;}
 
