@@ -98,6 +98,12 @@ $options
 			->radio($themeslug."_bg_image_attachment", "Select the Image Attachment", array( 'options' => array("scroll" => "Scroll", "fixed" => "Fixed")))
 			->color($themeslug."_background_color", "Select a Background Color")
 		->subsection_end()
+		->subsection("Layout")
+			->checkbox($themeslug."_standard_web_layout", "Standard Web Layout")
+			->text($themeslug."_row_max_width", "Row Max Width", array('default' => '980px'))
+			->text($themeslug."_row_min_width", "Row Min Width", array('default' => '727px'))
+			->checkbox($themeslug."_widget_title_background", "Widget Title Background", array('default' => true))
+		->subsection_end()
 		->subsection("Custom Colors")
 			->color($themeslug."_text_color", "Text Color")
 			->color($themeslug."_sitetitle_color", "Site Title Color")
@@ -107,9 +113,6 @@ $options
 			->color($themeslug."_posttitle_color", "Post Title Color")
 			->color($themeslug."_footer_color", "Footer Color")
 		->subsection_end()
-			->open_outersection()
-				->checkbox($themeslug."_widget_title_background", "Widget Title Background", array('default' => true))
-			->close_outersection()
 			->open_outersection()
 				->textarea($themeslug."_css_options", "Custom CSS")
 			->close_outersection()
